---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2025-01-05
  Graphics:
    - Change color of dust resistant roboport
  Compatibility:
    - Added compatibility with Technology price multiplier mod and added setting to enable exponential price
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2025-12-22
  Balancing:
    - Augmented solar power in arig 250 -> 300
  Compatibility:
    - Added recipe for the msppr mod
    - Added space connections with maraxsis
    - Added space connections with tiber
  Bugfixes:
    - Fixed arig sand not autoplacing sandstone foundation with blueprints
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2025-12-19
  Changes:
    - Added solar panels, supported electric pole and water harvester to electromagnetics and advanced crafing categories
  Compatibility:
    - Added canal excavator mod compatibility by jurgyy
    - Fixed error with Quality Unlocks Recycling mod
    - Fixed error with advanced solar pannels collision box being different than solar panels
    - Fixed quartz productivity technology not affecting hyarion advanced quartz recipe
  Bugfixes:
    - Fixed big container corpse graphic being shifted
    - Fixed enable cargo drop setting not working
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-12-08
  Bugfixes:
    - Fixed parser error
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-12-05
  Bugfixes:
    - Fixed auto reycling enable for the sifter and press
    - Fixed crash with space age overhaul mod
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-12-03
  Features: